# oil-spill-simulation

./: .gitignore  LICENSE  README.md  README_simplified.md  pyproject.toml
config_files/: input.toml  restart_example.toml  sim2.toml
data/meshes/: bay.msh
simulation_results/: final_simulation_state.txt
src/oil_spill_simulation/: __init__.py  __main__.py  config.py  geometry.py  main.py  mesh.py  simulation.py  visualization.py
test_files/: test_geometry.py  test_mesh.py  test_neighbor.py  test_simulation.py
