[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "oil-spill-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "meshio>=5.3.5",
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
]


[project.scripts]
oil-spill-sim = "oil_spill_simulation.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"oil_spill_simulation" = ["data/meshes/*.msh"]
